--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -19,55 +19,8 @@ jobs:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-  atlas:
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: et
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4.1.3
-
-      - name: Create dummy tailwind file
-        run: touch tailwind/tailwind.css
-
-      - name: Enable extension
-        env:
-          PGPASSWORD: postgres
-        run: psql -h 127.0.0.1 -d et -U postgres -tc "CREATE EXTENSION pgcrypto;"
-
-      - name: Apply Schema
-        uses: docker://arigaio/atlas:0.21.1-community
-        env:
-          SKIP_TAILWIND: true
-          DATABASE_URL: "postgres://postgres:postgres@postgres/et?sslmode=disable"
-        with:
-          args: schema apply --env local --auto-approve
-
-      - name: sqlx check
-        run: cargo install sqlx-cli && cargo sqlx prepare --check
-        # uses: docker://arigaio/atlas:0.16.0-community
-        env:
-          SKIP_TAILWIND: true
-          DATABASE_URL: "postgres://postgres:postgres@localhost:5432/et?sslmode=disable"
-
   rust:
     uses: "philipcristiano/workflows/.github/workflows/rust.yml@main"
-    with:
-      setup_script: |
-          curl -sL https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.1/tailwindcss-linux-x64 -o tailwindcss
-          chmod +x tailwindcss
-          mv tailwindcss /usr/local/bin
 
   release-please:
     needs: [flake, rust, atlas]
@@ -77,6 +30,8 @@ jobs:
         with:
           token: ${{ secrets.REPO_TOKEN }}
           release-type: rust
+    env:
+      SQLX_OFFLINE: true
 
   flake:
     uses: "philipcristiano/workflows/.github/workflows/nix.yml@main"
