--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -10,7 +10,7 @@ jobs:
   docker_push:
     name: "Push docker image"
     uses: "philipcristiano/workflows/.github/workflows/docker-build-push.yml@main"
-    needs: [flake, rust, atlas]
+    needs: [flake, rust]
     with:
       repository: ${{ github.repository }}
       timeout: 25
