--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "declare_schema"
 version = "0.0.1"
 edition = "2021"
-description = ""
+description = "CLI / Library for Postgres schema migrations"
 license = "Apache-2.0"
 publish = false
 
