--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,4 @@ service_conventions = { version = "0.0.16", features = ["tracing", "oidc"]}
 sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "time", "chrono", "rust_decimal"] }
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 thiserror = "1.0.59"
-sqlparser = {  git = "https://github.com/sqlparser-rs/sqlparser-rs.git", branch = "main"}
+sqlparser = { version = "0.48.0" }
