fix: Remove unneeded features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ toml = "0.8.12"
 tracing = "0.1.40"
 
 url = "2.5.0"
-sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "time", "chrono", "rust_decimal"] }
+sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres"] }
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 thiserror = "1.0.59"
 sqlparser = { version = "0.49.0" }
