chore: Test against Postgres
Use sqlx tests to test a default schema, then generate a migration with
an expectation of the ALTERs required.

This will help exercise what information is pulled from Postgres in a
more end-to-end fashion. These should still be very quick to execute
overall

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,12 +21,15 @@ jobs:
       timeout: 25
 
   rust:
-    uses: "philipcristiano/workflows/.github/workflows/rust.yml@main"
+    uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
+    with:
+      db_name: et
+      db_user: et
+      db_password: et
 
   flake:
     uses: "philipcristiano/workflows/.github/workflows/nix.yml@main"
     with:
       flakes-from-devshell: true
       script: |
-        unset DATABASE_URL
-        cargo build
+        SQLX_OFFLINE=true cargo build
