--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,6 +23,21 @@ jobs:
   rust:
     uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
     with:
+      db_image: "postgres:18"
+      db_name: et
+      db_user: et
+      db_password: et
+
+  rust_postgres_17:
+    uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
+    with:
+      db_name: et
+      db_user: et
+      db_password: et
+
+  rust_postgres_16:
+    uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
+    with:
       db_name: et
       db_user: et
       db_password: et
