--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -22,9 +22,25 @@ jobs:
   rust:
     uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
     with:
-      db_name: declare-schema
-      db_user: declare-schema
-      db_password: declare-schema
+      db_image: "postgres:18"
+      db_name: et
+      db_user: et
+      db_password: et
+
+  rust_postgres_17:
+    uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
+    with:
+      db_name: et
+      db_user: et
+      db_password: et
+
+  rust_postgres_16:
+    uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
+    with:
+      db_name: et
+      db_user: et
+      db_password: et
+
 
   flake:
     uses: "philipcristiano/workflows/.github/workflows/nix.yml@main"
