chore: Update workflow names

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,6 +21,7 @@ jobs:
       timeout: 25
 
   rust:
+    name: Rust With Postgres 18
     uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
     with:
       db_image: "postgres:18"
@@ -29,6 +30,7 @@ jobs:
       db_password: et
 
   rust_postgres_17:
+    name: Rust With Postgres 17
     uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
     with:
       db_name: et
@@ -36,6 +38,7 @@ jobs:
       db_password: et
 
   rust_postgres_16:
+    name: Rust With Postgres 16
     uses: "philipcristiano/workflows/.github/workflows/rust_with_postgres.yml@main"
     with:
       db_name: et
